refactor: update event handling in API notebook for Travel Advisor to use a generator for Server Sent Events (SSE)

--- a/google-adk/travel-advisor/api.ipynb
+++ b/google-adk/travel-advisor/api.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "395a1881",
    "metadata": {},
    "outputs": [
@@ -15650,10 +15650,17 @@
     "\n",
     "response = requests.post(f\"{BASEURL}/run_sse\", json=message, stream=True)\n",
     "\n",
-    "client = sseclient.SSEClient(response)\n",
     "\n",
-    "for event in client.events():\n",
-    "    data = json.loads(event.data)\n",
+    "def event_stream(response):\n",
+    "    for line in response.iter_lines():\n",
+    "        if line:\n",
+    "            # SSE data lines start with \"data: \"\n",
+    "            if line.startswith(b\"data: \"):\n",
+    "                yield line[len(b\"data: \") :].decode(\"utf-8\")\n",
+    "\n",
+    "\n",
+    "for event_data in event_stream(response):\n",
+    "    data = json.loads(event_data)\n",
     "\n",
     "    content = data.get(\"content\")\n",
     "    parts = content.get(\"parts\")\n",
