--- a/langgraph/hi-langgraph/chatbot.ipynb
+++ b/langgraph/hi-langgraph/chatbot.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "471a3714",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langgraph.graph import StateGraph, START, END\n",
     "from typing_extensions import TypedDict\n",
-    "from typing import Annotated"
+    "from typing import Annotated\n",
+    "from langgraph.types import CachePolicy\n",
+    "from langgraph.cache.memory import InMemoryCache\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "6558e6db",
    "metadata": {},
    "outputs": [],
@@ -25,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1aa8bc6b",
    "metadata": {},
    "outputs": [],
@@ -34,7 +37,8 @@
     "\n",
     "\n",
     "class State(TypedDict):\n",
-    "    messages: Annotated[list[str], reducer_func]\n",
+    "    time: str\n",
+    "    # messages: Annotated[list[str], reducer_func]\n",
     "    # messages: Annotated[list[str], operator.add]\n",
     "\n",
     "\n",
@@ -45,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "8a2ff160",
    "metadata": {},
    "outputs": [],
    "source": [
     "def node_one(state: State) -> State:\n",
-    "    messages = state.get(\"messages\")\n",
-    "    last_message = messages[-1]\n",
+    "    messages = state.get(\"messages\", [])\n",
+    "\n",
     "    response = \"Hello, nice to meet you\"\n",
     "\n",
     "    return {\"messages\": [response]}\n",
@@ -60,7 +64,7 @@
     "\n",
     "def node_two(state: State):\n",
     "\n",
-    "    return {}\n",
+    "    return {\"time\": f\"{datetime.now()}\"}\n",
     "\n",
     "\n",
     "def node_three(state: State) -> State:\n",
@@ -70,24 +74,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "b3d45246",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x11180b820>"
+       "<langgraph.graph.state.StateGraph at 0x1136a8590>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "graph_builder.add_node(\"node_one\", node_one)\n",
-    "graph_builder.add_node(\"node_two\", node_two)\n",
+    "graph_builder.add_node(\n",
+    "    \"node_two\",\n",
+    "    node_two,\n",
+    "    cache_policy=CachePolicy(\n",
+    "        ttl=20,  # Node will be cached for 20 secs / Use when node is expensive\n",
+    "    ),\n",
+    ")\n",
     "graph_builder.add_node(\"node_three\", node_three)\n",
     "\n",
     "\n",
@@ -99,27 +109,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "089e6d1a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'messages': ['Hello!', 'Hello, nice to meet you']}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'time': '2025-11-20 13:32:19.227530'}\n",
+      "{'time': '2025-11-20 13:32:19.227530'}\n",
+      "{'time': '2025-11-20 13:32:19.227530'}\n",
+      "{'time': '2025-11-20 13:32:19.227530'}\n",
+      "{'time': '2025-11-20 13:32:39.250496'}\n"
+     ]
     }
    ],
    "source": [
-    "a: State = {\"messages\": [\"Hello!\"]}\n",
+    "import time\n",
     "\n",
-    "graph = graph_builder.compile()\n",
+    "graph = graph_builder.compile(cache=InMemoryCache())\n",
     "\n",
-    "graph.invoke(a)"
+    "\n",
+    "print(graph.invoke({}))\n",
+    "time.sleep(5)\n",
+    "print(graph.invoke({}))\n",
+    "time.sleep(5)\n",
+    "print(graph.invoke({}))\n",
+    "time.sleep(5)\n",
+    "print(graph.invoke({}))\n",
+    "time.sleep(5)\n",
+    "print(graph.invoke({}))"
    ]
   }
  ],
