--- a/langgraph/multi-agent-architectures/main.ipynb
+++ b/langgraph/multi-agent-architectures/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "727309c0",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "0a870699",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "47fcd01f",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "72f04081",
    "metadata": {},
    "outputs": [],
@@ -116,17 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "72166dc8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x114419250>"
+       "<langgraph.graph.state.StateGraph at 0x11413e270>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
     "        prompt=\"You're a Greek customer support agent. You only speak and understand Greek.\",\n",
     "        tools=[handoff_tool],\n",
     "    ),\n",
-    "    destinations=(\"korea_agent\", \"spanish_agent\"),\n",
+    "    destinations=(\"korean_agent\", \"spanish_agent\"),\n",
     ")\n",
     "graph_builder.add_node(\n",
     "    \"spanish_agent\",\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "3832b382",
    "metadata": {},
    "outputs": [
@@ -171,9 +171,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'messages': [HumanMessage(content='Hola~! Necesito ayuda con mi cuenta.', additional_kwargs={}, response_metadata={}, id='05e0ed80-9994-4332-a7ca-e101c9f31420')]}\n",
-      "{'messages': [HumanMessage(content='Hola~! Necesito ayuda con mi cuenta.', additional_kwargs={}, response_metadata={}, id='05e0ed80-9994-4332-a7ca-e101c9f31420')], 'current_agent': 'spanish_agent', 'transfered_by': 'korean_agent'}\n",
-      "{'messages': [HumanMessage(content='Hola~! Necesito ayuda con mi cuenta.', additional_kwargs={}, response_metadata={}, id='05e0ed80-9994-4332-a7ca-e101c9f31420'), AIMessage(content='The user message is in Spanish, and as a Spanish customer support agent, I can handle this directly. No handoff is necessary. \\n\\nNo tool call required.', additional_kwargs={}, response_metadata={'model': 'qwen3-vl:32b', 'created_at': '2025-12-03T07:42:49.923475023Z', 'done': True, 'done_reason': 'stop', 'total_duration': 15330294940, 'load_duration': 70706897, 'prompt_eval_count': 355, 'prompt_eval_duration': 67704584, 'eval_count': 524, 'eval_duration': 15027721391, 'logprobs': None, 'model_name': 'qwen3-vl:32b'}, id='run--5b332999-4ee5-4df8-8f78-4d1487c8b53f-0', usage_metadata={'input_tokens': 355, 'output_tokens': 524, 'total_tokens': 879})], 'current_agent': 'spanish_agent', 'transfered_by': 'korean_agent'}\n"
+      "{'messages': [HumanMessage(content='Hola~! Necesito ayuda con mi cuenta.', additional_kwargs={}, response_metadata={}, id='9076624e-c49e-4f9a-9fa7-ba7925f97c34')]}\n",
+      "{'messages': [HumanMessage(content='Hola~! Necesito ayuda con mi cuenta.', additional_kwargs={}, response_metadata={}, id='9076624e-c49e-4f9a-9fa7-ba7925f97c34')], 'current_agent': 'spanish_agent', 'transfered_by': 'korean_agent'}\n",
+      "{'messages': [HumanMessage(content='Hola~! Necesito ayuda con mi cuenta.', additional_kwargs={}, response_metadata={}, id='9076624e-c49e-4f9a-9fa7-ba7925f97c34'), AIMessage(content='The user is speaking in Spanish, which is the language I understand and can respond in. No handoff is needed. I will respond in Spanish to assist with the account query.', additional_kwargs={}, response_metadata={'model': 'qwen3-vl:32b', 'created_at': '2025-12-03T08:34:57.01580479Z', 'done': True, 'done_reason': 'stop', 'total_duration': 7680249406, 'load_duration': 72709287, 'prompt_eval_count': 356, 'prompt_eval_duration': 68867003, 'eval_count': 261, 'eval_duration': 7450066794, 'logprobs': None, 'model_name': 'qwen3-vl:32b'}, id='run--5c0ed552-6b1a-43f1-a098-f205fceadc20-0', usage_metadata={'input_tokens': 356, 'output_tokens': 261, 'total_tokens': 617})], 'current_agent': 'spanish_agent', 'transfered_by': 'korean_agent'}\n"
      ]
     }
    ],
